<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Search</string>
    <string name="media_library">Media Library</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share">Share</string>
    <string name="course" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support">Contact support</string>
    <string name="email" translatable="false">AnRobo07@yandex.ru</string>
    <string name="subject">Message to the developers of the Playlist Maker app</string>
    <string name="text">Thanks to the developers for a cool app!</string>
    <string name="user_agreement">User agreement</string>
    <string name="offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="empty_result">Nothing found</string>
    <string name="no_connection">Connection issues\n\nCan\'t load. Check your internet connection</string>
    <string name="update">Update</string>
    <string name="you_have_searched">You have searched</string>
    <string name="clear_history">Clear history</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="release_year">Year</string>
    <string name="album">Album</string>
    <string name="duration">Duration</string>
    <string name="no_preview">There\'s no preview for this track</string>
    <string name="liked_tracks">Liked tracks</string>
    <string name="empty_media_library">Your media library is empty</string>
    <string name="playlists">Playlists</string>
    <string name="no_playlists">You haven\'t created any playlist yet</string>
    <string name="new_playlist">New playlist</string>
    <string name="preparing">Preparing</string>
    <string name="name">Name*</string>
    <string name="description">Description</string>
    <string name="create_playlist">Create</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="playlist_data_warning">All data will be wiped!</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="creation_error">Creation Error</string>
    <string name="loading_error">Loading Error</string>
    <string name="track_added_to_playlist">Track added to playlist </string>
    <string name="track_is_in_playlist">Track is already added to playlist </string>
    <string name="edit_info">Edit info</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_track">Do you want to delete track?</string>
    <string name="no_tracks">There is no list of tracks in this playlist that can be shared</string>
    <string name="delete_playlist_question">Do you want to delete playlist</string>
    <string name="save">Save changes</string>
    <string name="name_cant_be_empty">Playlist name cat\'t be empty</string>

    <plurals name="tracks_plurals">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <plurals name="minutes_plurals">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>