<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:paddingStart="@dimen/small_padding"
    android:paddingTop="10dp"
    android:paddingEnd="@dimen/small_padding"
    android:paddingBottom="6dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_to_main"
        style="@style/toolbar_style"
        app:title="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/medium_padding"
        android:layout_marginEnd="@dimen/medium_padding"
        android:background="@drawable/rounded_search_edittext"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_weight="1"
            android:src="@drawable/search"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/search_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="@color/transparent"
            android:fontFamily="@font/ys_display_medium"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:singleLine="true"
            android:textColor="@color/unchangeable_standard_text_color"
            android:textColorHint="@color/why"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/standard_text_size"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_weight="1"
            android:alpha="0.0"
            android:src="@drawable/clear"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/empty_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">
        <!--        ya know what?? fuck you and your warnings-->

        <ImageView
            android:id="@+id/empty_result_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
        <!--        ya know what?? fuck you and your warnings-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/empty_result"
            android:textColor="@color/standard_text_color"
            android:textSize="@dimen/standard_title_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_connection_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/no_connection_light"
            tools:ignore="ContentDescription" />
        <!--        ya know what?? fuck you and your warnings-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/no_connection"
            android:textColor="@color/standard_text_color"
            android:textSize="@dimen/standard_title_size" />

        <TextView
            android:id="@+id/update_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="@dimen/even_smaller_padding"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/standard_text_color"
            android:text="@string/update"
            android:textColor="@color/background_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/you_have_searched"
            android:textColor="@color/standard_text_color"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/even_smaller_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/even_smaller_padding"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:padding="@dimen/even_smaller_padding"
            android:text="@string/clear_history"
            android:textColor="@color/background_color"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_margin="100dp"
        android:indeterminateTint="@color/unchangeable_background_main"
        android:visibility="gone"/>

</LinearLayout>