<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back"
        style="@style/toolbar_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/image_rectangle"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/add_playlist_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/outlined_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/playlist_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlists_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/outlined_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_playlist"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/unfocused_box_color"
        android:enabled="false"
        android:text="@string/create_playlist"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>